css/index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;900&display=swap');
html {
  font-family: 'Playfair Display', serif;
}

.container {
  width: 100%;
  max-width: 1500px;
  margin: 0 auto 0 auto;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
}

.me-section {
  grid-column: span 2;
  background-color: blue;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.me-section > .profile-img-container {
  height: 150px;
  width: 150px;
  display: flex;
  justify-content: center;
  border: 3px solid white;
  border-radius: 75px;
  overflow: hidden;
  background-color: white;
  margin-top: 50px;
}

.me-section > .profile-img-container > img {
  height: 150px;
  width: auto;
}

.me-section > h4 {
  color: #fff;
  margin-top: 22px;
  font-size: 27px;
  font-weight: 900;
}

.me-section > h3 {
  color: #fff;
  margin-top: 10px;
  font-size: 25px;
  font-weight: 500;
}

.me-section > p {
  width: 74%;
  margin-top: 40px;
  color: #fff;
  font-size: 20px;
  padding-left: 10px;
  border-left: 3px solid orange;
}

.me-section > ul {
  display: flex;
  flex-direction: row;
}

.me-section > ul > li {
  margin: 10px;
}

.me-section > ul > li > a {
  color: #fff;
  font-size: 38px;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  font-size: 14px;
  width: 90px;
  top: 45px;
  left: -30px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.content-section {
  grid-column: span 4;
  height: 100vh;
  overflow-y: scroll;
  background-color: #f6f6f6;
}

.projects-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project {
  width: 90%;
  display: flex;
  background-color: #fff;
  padding: 20px;
  margin-top: 20px;
}


.project > img {
  height: 140px;
  width: auto;
}

.project > .project-info {
 margin-left: 10px; 
}

.project > .project-info > h4 {
  font-size: 25px;
  font-weight: 900;  
}

.project > .project-info > p {
  font-size: 16px;
}

.project > .project-info > .buttons {
  margin-top: 20px;
  display: flex;
  justify-content: flex-end;
}

.project > .project-info > .buttons > a:nth-of-type(1) {
  margin-right: 15px;
}

.project > .project-info > .buttons > a > button:hover {
  cursor: pointer;
}

.project > .project-info > .buttons > a > button {
  height: 35px;
  border: none;
}

.project > .project-info > .buttons > a:nth-of-type(1) > button {
  background-color: purple;
  color: #fff;
}

.project > .project-info > .buttons > a:nth-of-type(2) > button {
  background-color: rgb(108, 233, 6);
  color: #fff;
}

.layer1 {
	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
}

.layer2 {
	-webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
}

.layer3 {
	-webkit-box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
    box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
}

.layer4 {
	-webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}


@media screen and (max-width: 767px) {

}

@media screen and (max-width: 1000px) {
}

@media screen and (min-width: 1340px) {
}

